# cline_project_template

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  importlinter.ini  mkdocs.yml  pyproject.toml
.clinerules/: 000-core-principles.md  000-principles.md  010-continuous-improvement-protocol.md  010-python-style-and-typing.md  010-python-style.md  020-architecture-and-boundaries.md  020-license-handling.md  020-style-typing-docs.md  030-adr-policy.md  030-architecture-and-boundaries.md  030-architecture-and-oop.md  030-architecture.md  040-bugfix-rca.md  040-oop-practices.md  040-oop.md  050-testing-standards.md  050-testing.md  060-docs.md  060-documentation-standards.md  060-security.md  070-performance.md  070-security-standards.md  070-security.md  080-config-driven-design.md  080-performance-standards.md  080-performance.md  090-git-and-prs.md  090-git-prs-and-ci.md  100-adr-policy.md  100-ci-standards.md  100-ci.md  110-mcp-execution.md  110-root-cause-bugfixing.md  120-configuration-driven-design.md  120-context7-mcp.md  130-mcp-and-cline-execution-protocol.md  130-sequentialthinking-mcp.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  contributing.md  index.md  security.md
memory-bank/: projectbrief.md
scripts/: check_license.py  dev.sh  release.sh
src/cline_project_template/: __init__.py  init.py
src/cline_project_template/adapters/: __init__.py  cli_adapter.py  init.py
src/cline_project_template/application/: example_use_case.py  init.py
src/cline_project_template/cli/: __init__.py  init.py  main.py
src/cline_project_template/config/: __init__.py  init.py  settings.py
src/cline_project_template/domain/: __init__.py  example_entity.py  init.py
src/cline_project_template/infrastructure/: __init__.py  db_gateway.py  init.py
src/cline_project_template/shared/: __init__.py  init.py  utils.py
tests/e2e/: test_cli.py
tests/integration/: test_db_gateway.py  test_use_case_with_repo.py
tests/property/: test_entity_properties.py
tests/unit/: test_example_entity.py  test_utils.py
